Fix submenu z-index

--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -89,6 +89,7 @@ nav {
     box-shadow: var(--box-shadow);
     transition: var(--transition);
     display: none;
+    z-index: 10;
 }
 
 .sub_nav:hover {
